--- a/index.html
+++ b/index.html
@@ -109,21 +109,11 @@
 			</div>
 		</section>
 
-
-
 	</main>
 
 	<footer class="footer">
-	</footer>
-
-	<script src="js/script.js"></script>
-
-
-	</section>
-
-	<footer class="footer">
 		<div class="container">
-			<div class="footer-container">
+			<div class="footer-content">
 
 				<div class="footer-block">
 					<h4 class="footer-title">XBOX</h4>
@@ -157,7 +147,7 @@
 		</div>
 	</footer>
 
-
+	<script src="js/script.js"></script>
 </body>
 
 </html>
